2002-05-13 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Improve symmetry for backward calc.

2002-05-08 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Check values arguments of eps_at and mu_at.
        * slab.h: Ditto.

2002-05-07 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Use Material::eps_mu.
        * slab.cpp: Ditto.

2002-05-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Allow for backward calculation of fields.
        * slabmode.h: Ditto.
        * slab.cpp: Ditto.

2002-05-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve parameters to mueller_multiple.

2002-05-01 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Don't truncate modes prematurely.
	            Improve stability.

2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Add support for turning off degenerate handling.

2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Rework handling of degenerate modes.

2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabdisp.cpp: Only scale when tracking.

2002-04-30 Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>

        * slabmode.cpp: Reset scaling after core region.

2002-03-18 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Improve portability.
	* slaboverlap.cpp: Ditto.
	* slaboverlap.h: Ditto.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.h: Remember kt.
	* slabmode.cpp: Dito.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Refactor, fix memory leak, fix tracing.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Make use of new interface for traceroot.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Fix typo.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabdisp.cpp: Micro-optimise.
